--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.49.10"
+    "sass": "^1.49.10",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
